// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component given a default theme was provided when no props are overridden should render correctly 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-19 MuiAvatar-circle MuiAvatar-colorDefault"
>
  <i
    className="natds-icons natds-icons-outlined-social-person NatDSIcon-root-21"
  />
</div>
`;

exports[`Avatar component given a specific theme was explicitly provided when color is "default" should render default correctly 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-181 MuiAvatar-circle MuiAvatar-colorDefault"
>
  <i
    className="natds-icons natds-icons-outlined-social-person NatDSIcon-root-183"
  />
</div>
`;

exports[`Avatar component given a specific theme was explicitly provided when color is "primary" should render primary correctly 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-145 MuiAvatar-circle MuiAvatar-colorDefault"
>
  <i
    className="natds-icons natds-icons-outlined-social-person NatDSIcon-root-147"
  />
</div>
`;

exports[`Avatar component given a specific theme was explicitly provided when color is "secondary" should render secondary correctly 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-163 MuiAvatar-circle MuiAvatar-colorDefault"
>
  <i
    className="natds-icons natds-icons-outlined-social-person NatDSIcon-root-165"
  />
</div>
`;

exports[`Avatar component given a specific theme was explicitly provided when no property is provided should render correctly 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-37 MuiAvatar-circle MuiAvatar-colorDefault"
>
  <i
    className="natds-icons natds-icons-outlined-social-person NatDSIcon-root-39"
  />
</div>
`;

exports[`Avatar component given a specific theme was explicitly provided when size is "huge" should render huge correctly 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-127 MuiAvatar-circle MuiAvatar-colorDefault"
>
  <i
    className="natds-icons natds-icons-outlined-social-person NatDSIcon-root-129"
  />
</div>
`;

exports[`Avatar component given a specific theme was explicitly provided when size is "large" should render large correctly 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-109 MuiAvatar-circle MuiAvatar-colorDefault"
>
  <i
    className="natds-icons natds-icons-outlined-social-person NatDSIcon-root-111"
  />
</div>
`;

exports[`Avatar component given a specific theme was explicitly provided when size is "small" should render small correctly 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-73 MuiAvatar-circle MuiAvatar-colorDefault"
>
  <i
    className="natds-icons natds-icons-outlined-social-person NatDSIcon-root-75"
  />
</div>
`;

exports[`Avatar component given a specific theme was explicitly provided when size is "standard" should render standard correctly 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-91 MuiAvatar-circle MuiAvatar-colorDefault"
>
  <i
    className="natds-icons natds-icons-outlined-social-person NatDSIcon-root-93"
  />
</div>
`;

exports[`Avatar component given a specific theme was explicitly provided when size is "tiny" should render tiny correctly 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-55 MuiAvatar-circle MuiAvatar-colorDefault"
>
  <i
    className="natds-icons natds-icons-outlined-social-person NatDSIcon-root-57"
  />
</div>
`;

exports[`Avatar component given no theme was provided when an icon is provided as children should render correctly 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-15 MuiAvatar-circle MuiAvatar-colorDefault"
>
  <i />
</div>
`;

exports[`Avatar component given no theme was provided when an image is provided as children should render correctly 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-17 MuiAvatar-circle"
>
  <img
    alt=""
    className="MuiAvatar-img"
    src="source/image.png"
  />
</div>
`;

exports[`Avatar component given no theme was provided when color is "default" should render default color correctly 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-5 MuiAvatar-circle MuiAvatar-colorDefault"
>
  A
</div>
`;

exports[`Avatar component given no theme was provided when color is "primary" should render primary color correctly 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-1 MuiAvatar-circle MuiAvatar-colorDefault"
>
  A
</div>
`;

exports[`Avatar component given no theme was provided when color is "secondary" should render secondary color correctly 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-3 MuiAvatar-circle MuiAvatar-colorDefault"
>
  A
</div>
`;

exports[`Avatar component given no theme was provided when initials are provided as children should render correctly 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-13 MuiAvatar-circle MuiAvatar-colorDefault"
>
  AB
</div>
`;
